# Fintech

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
account/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_account_account_balance_currency_and_more.py  0003_alter_account_status.py  0004_alter_account_ref_code.py  0005_alter_account_account_id_and_more.py  0006_alter_account_account_id.py  0007_alter_account_ref_code_kyc.py  0008_alter_kyc_dob_alter_kyc_image.py  0009_kyc_identity_image_alter_kyc_city_and_more.py  0010_alter_kyc_user.py  0011_kyc_account_alter_kyc_user.py  0012_kyc_address.py  0013_alter_kyc_signature.py  0014_alter_kyc_image.py  0015_alter_kyc_city.py  0016_alter_kyc_city.py  0017_alter_kyc_city.py  0018_alter_kyc_city.py  0019_alter_kyc_city.py  0020_alter_kyc_city_transaction.py  0021_alter_transaction_reference_number_and_more.py  0022_alter_transaction_status_and_more.py  0023_transaction_amount_currency_alter_transaction_amount.py  0024_alter_transaction_status_and_more.py  0025_alter_transaction_status.py  0026_alter_transaction_status.py  0027_creditcard.py  0028_alter_creditcard_card_number.py  0029_remove_creditcard_amount_and_more.py  0030_creditcard_amount_creditcard_amount_currency.py  0031_alter_creditcard_user.py  0032_alter_creditcard_user.py
core/: urls.py  views.py
fintech/: settings.py  urls.py
templates/account/: account.html  card-details.html  dashboard.html  kyc-form.html  payment-confirmation.html  receive_payment.html  receive_payment2.html  (+10 more)
userAuth/: forms.py  models.py  urls.py  views.py
(+11 files in other folders)
